# iamb

./: .gitattributes  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  MSC4352.md  PACKAGING.md  README.md  build.rs  config.example.toml  flake.nix  iamb.desktop  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: binaries.yml  ci.yml
docs/: example_config.json  iamb.1  iamb.1.md  iamb.5  iamb.5.md  iamb.metainfo.xml
src/: base.rs  commands.rs  completions.rs  config.rs  keybindings.rs  main.rs  message.rs  notifications.rs  permalink.rs  preview.rs  sled_export.rs  tests.rs  util.rs  verifications.rs  worker.rs
src/message/: compose.rs  html.rs  live.rs  live_detection.rs  mod.rs  printer.rs  state.rs
src/windows/: mod.rs  spacetree.rs  welcome.md  welcome.rs
src/windows/room/: chat.rs  invite.rs  message.rs  mod.rs  scrollback.rs  space.rs
